# rag-pdf-langchain

./: .gitignore  README.md  pyproject.toml
backend/: main.py
core/: __init__.py  config.py  rag.py
frontend/: app.py
